# labelbricks

./: .gitignore  CLAUDE.md  NOTICE  PROGRESS.md  PROJECT_PLAN.md  README.md  app.py  app.yaml  databricks.yml  main.py  pyproject.toml  requirements.txt  template.env.txt
libraries/: ai_client.py  db.py  migration.py  schema.py  storage.py  volumes.py
scripts/: bootstrap_lakebase.py
static/: style.css
static/js/: ai-suggest.js  annotation-store.js  api-client.js  app.js  canvas-manager.js  label-manager.js  label-popup.js  script.js  sidebar.js  tool-manager.js  undo-manager.js  volume-browser.js
static/js/tools/: circle.js  freehand.js  polygon.js  rectangle.js  select.js
templates/: index.html  set_volume.html
